--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.20.3",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
