--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@eslint/js": "^9.10.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.36.1",
